Update FilterCommandParserTest.java